refactor: 여행코스 로직 리펙토링